Conectar rutas con componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <!-- <input type="file" (change)="onUpload($event)" /> -->
 <!-- <img *ngIf="imgRta" [src]="imgRta" /> -->
 <app-nav></app-nav>
-<app-products></app-products>
+<router-outlet></router-outlet>
