Añadir ProductDetailComponent y configurar la ruta dinámica `/product/:id`

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,8 +1,10 @@
 <div class="app-product-card">
-  <app-img
-    *ngIf="product.images.length > 0"
-    [img]="product.images[0]"
-  ></app-img>
+  <a [routerLink]="['/product', stringId()]">
+    <app-img
+      *ngIf="product.images.length > 0"
+      [img]="product.images[0]"
+    ></app-img>
+  </a>
   <h2>{{ product.price | currency }}</h2>
   <p>{{ product.title }}</p>
   <div class="product-actions">
