Implementación de AuthGuard para proteger ruta profile

--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -41,7 +41,9 @@
       </ul>
     </nav>
     <div class="info">
-      <div *ngIf="profile" class="account">{{ profile.email }}</div>
+      <div *ngIf="profile" class="account">
+        <a routerLink="/profile">{{ profile.email }}</a>
+      </div>
       <button *ngIf="!profile" (click)="login()">Login</button>
       <div class="cart">
         <a href="">
