Implementación de Logout

--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -43,6 +43,7 @@
     <div class="info">
       <div *ngIf="profile" class="account">
         <a routerLink="/profile">{{ profile.email }}</a>
+        <button (click)="logout()">Logout</button>
       </div>
       <button *ngIf="!profile" (click)="login()">Login</button>
       <div class="cart">
