--- a/src/app/website/pages/home/home.component.html
+++ b/src/app/website/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <app-products
   [productId]="productId"
   [products]="products"
-  (onLoadMore)="handleLoadMore()"
+  (loadMoreOutput)="handleLoadMore()"
 ></app-products>
